# king-office

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: account.rs  logger.rs  main.rs
src/components/: Login.tsx  MainInterface.tsx  SetupWizard.tsx  Toast.tsx
src/components/editors/: DocumentEditor.tsx  PdfViewer.tsx  PresentationEditor.tsx  SpreadsheetEditor.tsx
src/styles/: components.css  index.css
